// Copyright 2018 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package internal.db;

option go_package = "internal";

import "google/protobuf/timestamp.proto";


// FinishedInvocation represents a recently finished invocation of a job.
//
// It is stored as part of Job entity inside FinishedInvocationsRaw field.
message FinishedInvocation {
  int64 invocation_id = 1;
  google.protobuf.Timestamp finished = 2;  // when it was finished
}


// FinishedInvocationList is stored in Job entities as FinishedInvocationsRaw.
message FinishedInvocationList {
  repeated FinishedInvocation invocations = 1;
}
